Use Integer.valueOf() and fix comment casing
Replace explicit new Integer(...) with Integer.valueOf(...) for exported_* map keys in ASMParser.java and ASMParser.jj to reduce unnecessary allocations and rely on Integer caching. Also correct minor comment casing from CTLLibrary/LTLLibrary to CTLlibrary/LTLlibrary in ASMParser.java. No functional behavior changes intended.